--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-speech-recognition": "^2.0.4",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.4"
   },
   "scripts": {
